--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "deploy": "next build && next export && npx thirdweb@latest upload out"
   },
   "dependencies": {
-    "@thirdweb-dev/react": "^4",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@thirdweb-dev/react": "^3.10.3",
     "@thirdweb-dev/sdk": "^4",
     "ethers": "^5",
+    "framer-motion": "^11.1.7",
     "next": "^13",
     "react": "^18.2",
     "react-dom": "^18.2"
