--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^11.1.7",
     "next": "^13",
     "react": "^18.2",
-    "react-dom": "^18.2"
+    "react-dom": "^18.2",
+    "react-hook-form": "^7.51.3"
   },
   "devDependencies": {
     "@types/node": "^18.11.11",
